@@ -2,6 +2,7 @@ package org.apereo.cas;
 
 import org.apereo.cas.configuration.model.support.ldap.AbstractLdapAuthenticationProperties;
 import org.apereo.cas.configuration.model.support.ldap.AbstractLdapProperties;
+import org.apereo.cas.configuration.model.support.ldap.LdapPasswordPolicyProperties;
 import org.apereo.cas.configuration.model.support.ldap.LdapSearchEntryHandlersProperties;
 import org.apereo.cas.util.LdapConnectionFactory;
 import org.apereo.cas.util.LdapUtils;
@@ -10,6 +11,7 @@ import org.apereo.cas.util.scripting.GroovyScriptResourceCacheManager;
 import org.apereo.cas.util.scripting.ScriptResourceCacheManager;
 import org.apereo.cas.util.spring.ApplicationContextProvider;
 
+import com.google.common.collect.ArrayListMultimap;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Tag;
@@ -18,6 +20,7 @@ import org.ldaptive.ConnectionFactory;
 import org.ldaptive.DerefAliases;
 import org.ldaptive.LdapAttribute;
 import org.ldaptive.LdapEntry;
+import org.ldaptive.auth.ext.ActiveDirectoryAuthenticationResponseHandler;
 import org.ldaptive.handler.CaseChangeEntryHandler;
 import org.ldaptive.sasl.Mechanism;
 import org.ldaptive.sasl.QualityOfProtection;
@@ -26,7 +29,7 @@ import org.springframework.context.support.StaticApplicationContext;
 
 import java.io.File;
 import java.io.Serial;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyStore;
 import java.util.Arrays;
@@ -47,7 +50,7 @@ import static org.mockito.Mockito.*;
 class LdapUtilsTests {
 
     @Test
-    void verifyGetBoolean() {
+    void verifyGetBoolean() throws Throwable {
         val entry = new LdapEntry();
         entry.addAttributes(new LdapAttribute("attr1", "true"));
         entry.addAttributes(new LdapAttribute("attr2", StringUtils.EMPTY));
@@ -59,7 +62,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyGetLong() {
+    void verifyGetLong() throws Throwable {
         val entry = new LdapEntry();
         entry.addAttributes(new LdapAttribute("attr1", "100"));
         val input = LdapUtils.getLong(entry, "attr1", 0L);
@@ -67,7 +70,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyGetBinary() {
+    void verifyGetBinary() throws Throwable {
         val entry = new LdapEntry();
         val attr = new LdapAttribute("attr1", "100".getBytes(StandardCharsets.UTF_8));
         attr.setBinary(true);
@@ -78,13 +81,13 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyEntry() throws Exception {
-        assertFalse(LdapUtils.isLdapConnectionUrl(new URL("https://github.com")));
+    void verifyEntry() throws Throwable {
+        assertFalse(LdapUtils.isLdapConnectionUrl(new URI("https://github.com").toURL()));
         assertFalse(LdapUtils.containsResultEntry(null));
     }
 
     @Test
-    void verifyFailsOp() throws Exception {
+    void verifyFailsOp() throws Throwable {
         val factory = mock(ConnectionFactory.class);
         val wrapper = new LdapConnectionFactory(factory);
         when(factory.getConnectionConfig()).thenThrow(new IllegalArgumentException("fails"));
@@ -97,7 +100,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyScriptedFilter() {
+    void verifyScriptedFilter() throws Throwable {
         val appCtx = new StaticApplicationContext();
         appCtx.refresh();
         ApplicationContextProvider.holdApplicationContext(appCtx);
@@ -121,14 +124,14 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyFilterByIndex() {
+    void verifyFilterByIndex() throws Throwable {
         val filter = LdapUtils.newLdaptiveSearchFilter("cn={0}", List.of("casuser"));
         assertTrue(filter.getParameters().containsKey("0"));
         assertTrue(filter.getParameters().containsValue("casuser"));
     }
 
     @Test
-    void verifyLdapAuthnAnon() {
+    void verifyLdapAuthnAnon() throws Throwable {
         val ldap = new Ldap();
         ldap.setLdapUrl("ldap://localhost:10389");
         ldap.setBindDn("cn=Directory Manager");
@@ -146,7 +149,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyLdapAuthnDirect() {
+    void verifyLdapAuthnDirect() throws Throwable {
         val ldap = new Ldap();
         ldap.setLdapUrl("ldap://localhost:10389");
         ldap.setBindDn("cn=Directory Manager");
@@ -162,7 +165,32 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyLdapAuthnActiveDirectory() {
+    void verifyActiveDirectoryPasswordPolicy() throws Throwable {
+        val ldap = new Ldap();
+        ldap.setLdapUrl("ldap://localhost:10389");
+        ldap.setBindDn("cn=Directory Manager");
+        ldap.setBindCredential("password");
+        ldap.setBaseDn("ou=people,dc=example,dc=org");
+        ldap.setSearchFilter("cn=user");
+        ldap.setType(AbstractLdapAuthenticationProperties.AuthenticationTypes.AD);
+        ldap.setDnFormat("cn=%s,dc=example,dc=org");
+        val authenticator = LdapUtils.newLdaptiveAuthenticator(ldap);
+        assertNotNull(authenticator);
+        val passwordPolicy = new LdapPasswordPolicyProperties()
+            .setType(AbstractLdapProperties.LdapType.AD);
+        val configuration = LdapUtils.createLdapPasswordPolicyConfiguration(
+            passwordPolicy, authenticator, ArrayListMultimap.create());
+        assertNotNull(configuration);
+        val responseHandler = Arrays.stream(authenticator.getResponseHandlers()).findFirst()
+            .map(ActiveDirectoryAuthenticationResponseHandler.class::cast)
+            .orElseThrow();
+        assertNotNull(responseHandler.getExpirationPeriod());
+        assertNotNull(responseHandler.getWarningPeriod());
+    }
+
+
+    @Test
+    void verifyLdapAuthnActiveDirectory() throws Throwable {
         val ldap = new Ldap();
         ldap.setLdapUrl("ldap://localhost:10389");
         ldap.setBindDn("cn=Directory Manager");
@@ -179,7 +207,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyPagedSearch() throws Exception {
+    void verifyPagedSearch() throws Throwable {
         val ldap = new Ldap();
         ldap.setBaseDn("ou=people,dc=example,dc=org");
         ldap.setLdapUrl("ldap://localhost:10389");
@@ -204,7 +232,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyComparePooling() throws Exception {
+    void verifyComparePooling() throws Throwable {
         val ldap = new Ldap();
         ldap.setBaseDn("ou=people,dc=example,dc=org|ou=users,dc=example,dc=org");
         ldap.setLdapUrl("ldap://localhost:10389");
@@ -236,7 +264,7 @@ class LdapUtilsTests {
     }
 
     @Test
-    void verifyConnectionConfig() throws Exception {
+    void verifyConnectionConfig() throws Throwable {
         val ldap = new Ldap();
         ldap.setBaseDn("ou=people,dc=example,dc=org|ou=users,dc=example,dc=org");
         ldap.setLdapUrl("ldap://localhost:10389");
