@@ -10,6 +10,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
+import java.net.URI;
 import java.net.URL;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -24,11 +25,11 @@ import static org.junit.jupiter.api.Assertions.*;
 @EnabledIfListeningOnPort(port = 11211)
 class URLSerializerTests {
     @Test
-    void verifyTranscoderWorks() throws Exception {
+    void verifyTranscoderWorks() throws Throwable {
         val pool = new CasKryoPool();
         try (val kryo = pool.borrow()) {
             val output = new ByteBufferOutput(4096);
-            kryo.writeObject(output, new URL("https://github.com"));
+            kryo.writeObject(output, new URI("https://github.com").toURL());
             val inputStream = new ByteArrayInputStream(output.toBytes());
             assertNotNull(kryo.readObject(new Input(inputStream), URL.class));
         }
